xraylib/Acq.cs


        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetConfiguration(IntPtr hAcqDesc,
                            ref uint dwFrames, ref uint dwRows, ref uint dwColumns, ref uint dwDataType,
                            ref uint dwSortFlags, ref bool bIRQEnabled, ref ulong dwAcqType, ref ulong dwSystemID,
                            ref ulong dwSyncMode, ref ulong dwHwAccess);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetIntTimes(IntPtr hAcqDesc, ref double[] dblIntTime, ref int nIntTimes);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetWinHandle(IntPtr hAcqDesc, HWND* hWnd);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetActFrame(IntPtr hAcqDesc, uint* dwActAcqFrame, uint* dwActSecBuffFrame);
        //# ifdef XIS_OS_64

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetAcqData(IntPtr hAcqDesc, void* AcqData);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetAcqData(IntPtr hAcqDesc, void** VoidAcqData);
        //#else

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetAcqData(IntPtr hAcqDesc, uint dwAcqData);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetAcqData(IntPtr hAcqDesc, uint* dwAcqData);
        //#endif // XIS_OS_64

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetHwHeaderInfo(IntPtr hAcqDesc, CHwHeaderInfo* pInfo);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFrameSync(IntPtr hAcqDesc);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFrameSyncMode(IntPtr hAcqDesc, uint dwMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetTimerSync(IntPtr hAcqDesc, uint* dwCycleTime);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_AbortCurrentFrame(IntPtr hAcqDesc);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetCorrData(IntPtr hAcqDesc, unsigned short* pwOffsetData, uint* pdwGainData, uint* pdwPxlCorrList);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetCorrData_Ex(IntPtr hAcqDesc, unsigned short* pwOffsetData, unsigned short* pwGainData,
        //                                            unsigned short* pwGainAvgData, uint nGainFrames,
        //                                            uint* pdwGainData, uint* pdwPxlCorrList);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetCorrData(IntPtr hAcqDesc, unsigned short** ppwOffsetData, uint** ppdwGainData, uint** ppdwPxlCorrList);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetCorrData_Ex(IntPtr hAcqDesc, unsigned short** ppwOffsetData, unsigned short** ppwGainData,
        //                                            unsigned short** ppwGainAvgData, uint** nGainFrames, uint** pdwGainData, uint** pdwPxlCorrList);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetCameraGain(IntPtr hAcqDesc, XRD4343_Gain wMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFrameSyncTimeMode(IntPtr hAcqDesc, unsigned int uiMode, unsigned int dwDelayTime);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Acquire_GainImage_Ex_ROI(IntPtr hAcqDesc, ushort* pOffsetData, uint* pGainData, uint nRows, uint nCols, uint nFrames, uint dwOpt, uint uiULX, uint uiULY, uint uiBRX, uint uiBRY, uint uiMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Acquire_Image_PreloadCorr(IntPtr hAcqDesc, uint dwFrames, uint dwSkipFrms, uint dwOpt);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Acquire_OffsetImage_PreloadCorr(IntPtr hAcqDesc, ushort* pwOffsetData, uint nRows, uint nColumns, uint nFrames, uint dwOpt);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetHwHeader(IntPtr hAcqDesc, byte* pData, unsigned int uiSize);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Acquire_GainImage_Ex_ROI_PreloadCorr(IntPtr hAcqDesc, uint* pGainData, uint nRows, uint nCols, uint nFrames, uint dwOpt, uint uiULX, uint uiULY, uint uiBRX, uint uiBRY, uint uiMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Acquire_GainImage_PreloadCorr(IntPtr hAcqDesc, uint* pGainData, uint nRows, uint nCols, uint nFrames);


        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetCameraBinningMode(IntPtr hAcqDesc, XRD4343_Binning wMode);

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetCameraBinningMode(IntPtr hAcqDesc, ref XRD4343_Binning wMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_ResetFrameCnt(IntPtr hAcqDesc);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetLatestFrameHeader(IntPtr hAcqDesc, CHwHeaderInfo* pInfo, CHwHeaderInfoEx* pInfoEx);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetHwHeaderInfoEx(IntPtr hAcqDesc, CHwHeaderInfo* pInfo, CHwHeaderInfoEx* pInfoEx);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetCameraTriggerMode(IntPtr hAcqDesc, ushort wMode);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetCameraTriggerMode(IntPtr hAcqDesc, ushort* wMode);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetRotationAngle(IntPtr hAcqDesc, long lRotAngle); // FG-E only can be -90 | 0 | 90

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetRotationAngle(IntPtr hAcqDesc, long* lRotAngle);



        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_Init(IntPtr* pIntPtr,
        //                                                            int nChannelNr,
        //                                                            bool bEnableIRQ,
        //                                                            uint uiRows, uint uiColumns,
        //                                                            bool bSelfInit, bool bAlwaysOpen,
        //                                                            long lInitType,
        //                                                            GBIF_STRING_DATATYPE* ucAddress
        //                                                          );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetDeviceList(GBIF_DEVICE_PARAM* pGBIF_DEVICE_PARAM, int nDeviceCnt);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetDevice(GBIF_STRING_DATATYPE* ucAddress, uint dwAddressType, GBIF_DEVICE_PARAM* pDevice);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetDeviceCnt(long* plNrOfboards);

        //        //HIS_RETURN Acquisition_GbIF_UploadPKIFirmware(			GBIF_STRING_DATATYPE* cMacAddress,
        //        //													void* pBitStream, long lBitStreamLength
        //        //										);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_SetConnectionSettings(GBIF_STRING_DATATYPE* cMAC,
        //                                                            unsigned long ulBootOptions,
        //                                                            GBIF_STRING_DATATYPE* cDefIP,
        //                                                            GBIF_STRING_DATATYPE* cDefSubNetMask,
        //                                                            GBIF_STRING_DATATYPE* cStdGateway
        //                                                        );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetConnectionSettings(GBIF_STRING_DATATYPE* ucMAC,
        //                                                            unsigned long* ulBootOptions,
        //                                                            GBIF_STRING_DATATYPE* ucDefIP,
        //                                                            GBIF_STRING_DATATYPE* ucDefSubNetMask,
        //                                                            GBIF_STRING_DATATYPE* ucStdGateway
        //                                                        );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetPacketDelay(IntPtr hAcqDesc,
        //                                                            long* lPacketdelay
        //                                                        );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_SetPacketDelay(IntPtr hAcqDesc,
        //                                                            long lPacketdelay
        //                                                    );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_ForceIP(GBIF_STRING_DATATYPE* cMAC,
        //                                                            GBIF_STRING_DATATYPE* cDefIP,
        //                                                            GBIF_STRING_DATATYPE* cDefSubNetMask,
        //                                                            GBIF_STRING_DATATYPE* cStdGateway
        //                                            );


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetFilterDrvState(IntPtr hAcqDesc


        //                                                      );

